
MKS
----------------------
* Fix synchronization failure on Linux (CC-576).

OSEnvironment
----------------------
* Fix for Windows Server 2003 and Java 5 (CC-573). Patch by Nate Austin

P4
----------------------
* Display modification time using local timezone if correctForServerTime is true (CC-574). Patch by Anatol Pomozov

PropertyFileLabelIncrementer
----------------------
* PropertyFileLabelIncrementer uses specified property file, not the previous log file. (CC-519)  Patch by Chad Woolley and Joe Moore.

SocketPublisher
----------------------
* Send project name and fixed vs. successful status (CC-575). Patch by Daniel Lindner

SVN
----------------------
* Add checkExternals flag to check for changes in svn:externals. (CC-585). Patch by Chad Woolley.

Veto
----------------------
* New SourceControl plug-in used to prevent a project from building when a dependency is out of date.

Maven2SnapshotDependency
----------------------
* Fix OutOfMemory exception in Maven2SnapshotDependency (CC-578). Patch by Anatol Pomozov

reporting application
======================

rss.jsp
----------------------
* Fixed NPE for projects without logs in their directory.

NavigationCountTag
----------------------
* Changed NavigationCountTag to extend CruiseControlTagSupport instead of CruiseControlBodyTagSupport to avoid error message that instances of BodyTag are not allowed to return EVAL_BODY_INCLUDE.

testdetails.xsl
----------------------
* Fixed failure and error links (CC-545). Patch by J. David Beutel.


CruiseControl Release Notes - 2.6

general
======================
* End of support for compiling/running Cruise with JDK 1.3. New earliest supported JDK is 1.4.x.
* Replace Xalan with Saxon.
* Overhaul handling of threads, streams and logging when executing external processes.

contrib
======================

distributed
----------------------
* Update distributed CC code for refactoring in core (CC-485). Patch by Dan Rollo